@@ -108,6 +108,10 @@
      We already mark the start of the worm, now also mark the end of the worm
      in our random art drawings.
      ok djm@
+   - djm@cvs.openbsd.org 2008/06/12 15:19:17
+     [clientloop.h channels.h clientloop.c channels.c mux.c]
+     The multiplexing escape char handler commit last night introduced a
+     small memory leak per session; plug it.
 
 20080611
  - (djm) [channels.c configure.ac]
@@ -4270,4 +4274,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4983 2008/06/12 18:55:10 dtucker Exp $
+$Id: ChangeLog,v 1.4984 2008/06/12 18:55:46 dtucker Exp $
